--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <!-- GitHub -->
     <section id="github-projects" class="p-10 bg-gray-100">
       <h2 class="text-3xl font-bold text-center mb-6">Mes Projets GitHub</h2>
-      <div id="projects-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+      <div id="projects-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 auto-rows-auto items-start">
       </div>
     </section>
     
